@@ -296,6 +296,8 @@ A partial list of the supported mount options follows:
 		unused.
   rsize		default read size (usually 16K)
   wsize		default write size (usually 16K, 32K is often better over GigE)
+		maximum wsize currently allowed by CIFS is 57344 (14 4096 byte
+		pages)
   rw		mount the network share read-write (note that the
 		server may still consider the share read-only)
   ro		mount network share read-only
